--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
   build_and_publish_api_for_amd:
     runs-on: ubuntu-latest
-    # needs: build_and_test
+    needs: build_and_test
     steps:
       - uses: actions/checkout@v4
       - name: Build and push the api image for amd
